# File-Assistant

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: config.example.yaml
docs/: FileAssistant-Phase2-Updated-Plan.md  file-organizer-project-plan.md
src/fileassistant/: __init__.py
src/fileassistant/analyzer/: __init__.py  analyzer.py  extractors.py
src/fileassistant/classifier/: __init__.py  classifier.py
src/fileassistant/cli/: __init__.py  index.py  main.py  search.py
src/fileassistant/config/: __init__.py  manager.py  models.py
src/fileassistant/core/: __init__.py  processor.py
src/fileassistant/database/: __init__.py  migrations.py  models.py  schema.py
src/fileassistant/embeddings/: __init__.py  generator.py
src/fileassistant/mover/: __init__.py  mover.py
src/fileassistant/search/: __init__.py  engine.py  index_manager.py
src/fileassistant/utils/: __init__.py  folder_scanner.py  logging.py
src/fileassistant/watcher/: __init__.py  handler.py  watcher.py
tests/: __init__.py  test_analyzer.py  test_classifier.py  test_cli_index.py  test_cli_search.py  test_embeddings.py  test_folder_scanner.py  test_index_manager.py  test_mover.py  test_processor.py  test_search_engine.py  test_search_integration.py  test_watcher.py
