[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fileassistant"
version = "0.1.0"
description = "A local, privacy-first AI assistant that learns how you organize files"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "FileAssistant Team"}
]
keywords = ["file-organizer", "ai", "local-llm", "automation", "organization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: Office/Business",
]

dependencies = [
    # File system monitoring
    "watchdog>=4.0.0",

    # AI and embeddings
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.1",

    # Document processing
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",

    # Configuration and validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",

    # CLI and UI
    "click>=8.1.7",
    "rich>=13.7.0",

    # Database
    "sqlalchemy>=2.0.25",

    # HTTP client (for Ollama)
    "httpx>=0.26.0",

    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
fileassistant = "fileassistant.cli.main:cli"

[project.urls]
Homepage = "https://github.com/fileassistant/fileassistant"
Documentation = "https://github.com/fileassistant/fileassistant/docs"
Repository = "https://github.com/fileassistant/fileassistant"
Issues = "https://github.com/fileassistant/fileassistant/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["fileassistant*"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=fileassistant",
]
markers = [
    "slow: marks tests as slow (require loading ML models)",
]
